manifests/collabora/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: collabora
    app.kubernetes.io/instance: nextcloud
    type: main
